# did-you-play-any-game-today

./: .dockerignore  .gitignore  .safety-policy.yml  Dockerfile  README.md  authorize.py  codecov.yml  compose.yaml  noxfile.py  pyproject.toml  test_settings.toml
.github/workflows/: push-docker-image.yml  tests.yml
src/did_you_play_any_game_today/: __main__.py  config.py
src/did_you_play_any_game_today/server/: main.py  task.py
src/did_you_play_any_game_today/server/routers/: admin.py  game.py
src/did_you_play_any_game_today/twitter/: __init__.py  auth.py  me.py  send.py  type.py
tests/: conftest.py  test_api_admin.py  test_api_game.py  test_server.py
ui/did-you-play-any-game-today/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/did-you-play-any-game-today/src/: App.svelte  app.css
