[project]
name = "did-you-play-any-game-today"
version = "0.1.0"
description = "A Twitter bot sending out tweets indicating if you played game today."
authors = [
    {name = "genzj", email = "zj0512@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "dynaconf>=3.2.3",
    "fastapi>=0.104.1",
    "fastapi-utils>=0.2.1",
    "schedule>=1.2.1",
    "pytz>=2023.3.post1",
    "uvicorn>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "types-requests>=2.31.0.10",
    "types-requests-oauthlib>=1.3.0.1",
]
